<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/content_company_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vizy.ignitar.activities.CompanyPageActivityFragment"
    tools:showIn="@layout/activity_company_page">

    <TextView
        android:id="@+id/company_name_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:maxLines="1"
        android:text="Chai Thela"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_28sp" />

    <TextView
        android:id="@+id/underscore_line"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_4dp"
        android:visibility="gone"
        android:layout_below="@+id/company_name_heading"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@color/white"
        android:gravity="center" />

    <android.support.v7.widget.CardView
        android:id="@+id/view_ad"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/underscore_line"
        android:layout_marginTop="120dp"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/action_image"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/action_image"
                android:layout_toRightOf="@+id/action_image"
                android:text="@string/view_ad_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view_give_feedback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_ad"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/view_give_feedback_action_image"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/view_give_feedback_action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/view_give_feedback_action_image"
                android:layout_toRightOf="@+id/view_give_feedback_action_image"
                android:text="@string/give_feedback_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view_my_action_meter"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_give_feedback"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/view_my_chai_meter_action_image"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/view_my_chai_meter_action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/view_my_chai_meter_action_image"
                android:layout_toRightOf="@+id/view_my_chai_meter_action_image"
                android:text="@string/my_chai_meter_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view_play_game"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_my_action_meter"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/view_play_game_action_image"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/view_play_game_action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/view_play_game_action_image"
                android:layout_toRightOf="@+id/view_play_game_action_image"
                android:text="@string/play_game_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view_review_on_zomato"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_play_game"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/view_review_on_zomato_action_image"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:padding="@dimen/dimen_4dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/view_review_on_zomato_action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/view_review_on_zomato_action_image"
                android:layout_toRightOf="@+id/view_review_on_zomato_action_image"
                android:text="@string/review_us_zaomato_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/company_specification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_review_on_zomato"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="@dimen/dimen_80dp"

            android:layout_height="@dimen/dimen_80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/underscore_line_2"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_below="@+id/company_logo"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/company_web_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_line_2"
            android:textColor="@color/white"
            android:text="www.company_image"
            android:maxLines="1"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/company_image"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_240dp"
        android:scaleType="fitXY"
        android:src="@drawable/cup"
        android:layout_alignTop="@+id/view_ad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/view_ad"
        android:layout_toStartOf="@+id/view_ad" />

</RelativeLayout>
